--- a/EduHomeUI/Areas/EHMasterPanel/Views/Skill/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Skill/Create.cshtml
@@ -16,6 +16,7 @@
                         <label asp-for="Skill" class="col-md-2 col-form-label">SkillLevel</label>
                         <div class="col-md-10">
                             <input asp-for="Skill" class="form-control" type="text" id="example-text-input">
+                            <span asp-validation-for="Skill" class="text-danger"></span>
                         </div>
                     </div>
 
