--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Details.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Details.cshtml
@@ -1,4 +1,13 @@
-﻿        <!-- Banner Area Start -->
+﻿@using EduHome.Core.Entities;
+@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseViewModels;
+@model CourseDetailsViewModel
+
+@{
+    var courseDetails = ViewBag.CourseDetails as CourseDetails;
+    var courseName = ViewBag.CourseName as string;
+}
+
+        <!-- Banner Area Start -->
 <div class="banner-area-wrapper">
     <div class="banner-area text-center">
         <div class="container">
@@ -22,10 +31,10 @@
             <div class="col-lg-8">
                 <div class="courses-details">
                     <div class="courses-details-img">
-                        <img src="img/course/courses-details.jpg" alt="courses-details">
+                        <img src="@Model.ImagePath" alt="@Model.ImageName">
                     </div>
                     <div class="course-details-content">
-                        <h2>CSE ENGINEERING</h2>
+                        <h2>@courseName</h2>
                         <p>I must explain to you how all this a mistaken idea of denouncing great explorer of the rut the is lder of human happiness pcias unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit asnatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui </p>
                         <div class="course-details-left">
                             <div class="single-course-left">
@@ -45,13 +54,34 @@
                         <div class="course-details-right">
                             <h3>COURSE FEATURES</h3>
                             <ul>
-                                <li>starts <span>25 june, 2021</span></li>
-                                <li>duration <span>6 Month</span></li>
-                                <li>class duration <span>3 hours</span></li>
-                                <li>skill level <span>all level</span></li>
-                                <li>language <span>english</span></li>
-                                <li>students <span>420</span></li>
-                                <li>assesments <span>self</span></li>
+                                <li>starts <span>@Model.Start</span></li>
+                                <li>duration <span>@Model.Duration</span></li>
+                                <li>class duration <span>@Model.ClassDuration</span></li>
+                                <li>
+                                    skill level:
+                                    @foreach (var skillLevel in courseDetails.CourseDetailsSkillLevels)
+                                    {
+                                        <span>@skillLevel.SkillLevel</span>
+                                    }
+                                </li>
+
+                                <li>
+                                    Language:
+                                    @foreach (var language in courseDetails.CourseDetailsLanguages)
+                                    {
+                                        <span>@language.Language</span>
+                                    }
+                                </li>
+
+                                <li>students <span>@Model.StudentCount</span></li>
+                                <li>
+                                    Assesment:
+                                    @foreach (var assesment in courseDetails.CourseDetailsAssesments)
+                                    {
+                                        <span>@assesment.Assesment</span>
+                                    }
+                                </li>
+
                             </ul>
                             <h3 class="red">course fee $789</h3>
                         </div>
