--- a/EduHomeUI/Areas/EHMasterPanel/Views/Language/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Language/Index.cshtml
@@ -23,6 +23,8 @@
                         <tbody>
                             @foreach (var language in Model.Languages)
                             {
+                                if (!language.IsDeleted)
+                                {
                                 <tr>
                                     <td>@count</td>
                                     <td>@language.LanguageOption</td>
@@ -31,6 +33,8 @@
                                     </td>
                                 </tr>
                                 count++;
+                                    
+                                }
                             }
                         </tbody>
                     </table>
