Teacher index view done

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -464,7 +464,7 @@
                                 <li><a asp-controller="Assesment" asp-action="Index">Assesment</a></li>
                                 <li><a asp-controller="Skill" asp-action="Index">Skills</a></li>
                                 <li><a asp-controller="Events" asp-action="Index">Events</a></li>
-                                <li><a asp-controller="Teachers" asp-action="Index">Teachers</a></li>
+                                <li><a asp-controller="Teacher" asp-action="Index">Teachers</a></li>
                                 <li><a asp-controller="Testimonials" asp-action="Index">Testimonials</a></li>
                                 <li><a asp-controller="Blogs" asp-action="Index">Blogs</a></li>
                                 <li><a asp-controller="Speakers" asp-action="Index">Speakers</a></li>
