--- a/EduHomeUI/Areas/EHMasterPanel/Views/Teacher/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Teacher/Index.cshtml
@@ -12,7 +12,7 @@
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">Teachers</h4>
-                    <a asp-controller="Course" asp-action="Create" class="btn btn-primary mb-4">Create New Teacher</a>
+                    <a asp-controller="Teacher" asp-action="Create" class="btn btn-primary mb-4">Create New Teacher</a>
                     <div class="table-responsive">
                         <table class="table table-striped table-bordered table-hover">
                             <thead>
@@ -35,12 +35,12 @@
                                             <td>@teacher.Name</td>
                                             <td>@teacher.Surname</td>
                                             <td>@teacher.Position</td>
-                                           @* <td>
-                                                <a asp-action="Update" asp-route-id="@course.Id" class="btn btn-warning"><i class="bi bi-pencil-square"></i></a>
-                                                <a asp-action="Delete" asp-route-id="@course.Id" class="btn btn-danger"><i class="bi bi-trash-fill"></i></a>
-                                                <a asp-controller="Course" asp-action="Details" asp-route-courseId="@course.Id" class="btn btn-success"><i class="bi bi-chat-left-dots"></i></a>
+                                            <td>
+                                                <a asp-action="Update" asp-route-id="@teacher.Id" class="btn btn-warning"><i class="bi bi-pencil-square"></i></a>
+                                                <a asp-action="Delete" asp-route-id="@teacher.Id" class="btn btn-danger"><i class="bi bi-trash-fill"></i></a>
+                                                <a asp-controller="Course" asp-action="Details" asp-route-id="@teacher.Id" class="btn btn-success"><i class="bi bi-chat-left-dots"></i></a>
 
-                                            </td>*@
+                                            </td>
                                         </tr>
                                         count++;
                                     }
