--- a/EduHomeUI/Areas/EHMasterPanel/Views/Assesment/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Assesment/Create.cshtml
@@ -10,17 +10,26 @@
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Create Assesment</h4>
+                <h4 class="card-title">Create Assessment</h4>
                 <form method="post">
                     <div class="mb-3 row">
-                        <label asp-for="AssesmentType" class="col-md-2 col-form-label">Assesment</label>
+                        <label asp-for="AssesmentType" class="col-md-2 col-form-label">Assessment Type</label>
                         <div class="col-md-10">
                             <input asp-for="AssesmentType" class="form-control" type="text" id="example-text-input">
                         </div>
                     </div>
 
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Create</button>
+                    <div class="row justify-content-end">
+                        <div class="col-sm-9">
+                            <div class="mt-3">
+                                <button type="submit" class="btn btn-warning w-md">Create</button>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-3 mt-3">
+                            <a asp-controller="Assesment" asp-action="Index" class="btn btn-outline-primary border form-control">
+                                Back to List
+                            </a>
+                        </div>
                     </div>
                 </form>
             </div>
