--- a/EduHomeUI/Areas/EHMasterPanel/Views/Language/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Language/Create.cshtml
@@ -20,8 +20,17 @@
                         </div>
                     </div>
 
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Create</button>
+                    <div class="row justify-content-end">
+                        <div class="col-sm-9">
+                            <div class="mt-3">
+                                <button type="submit" class="btn btn-warning w-md">Create</button>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-3 mt-3">
+                            <a asp-controller="Language" asp-action="Index" class="btn btn-outline-primary border form-control">
+                                Back to list
+                            </a>
+                        </div>
                     </div>
                 </form>
             </div>
