--- a/EduHomeUI/Areas/EHMasterPanel/Views/Teacher/Update.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Teacher/Update.cshtml
@@ -1,5 +1,5 @@
 ﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.TeacherViewModels;
-@model TeacherCreateViewModel
+@model TeacherUpdateViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <form asp-controller="Teacher" asp-action="Update" method="post">
