--- a/EduHomeUI/Areas/EHMasterPanel/Views/Teacher/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Teacher/Index.cshtml
@@ -38,7 +38,7 @@
                                             <td>
                                                 <a asp-action="Update" asp-route-id="@teacher.Id" class="btn btn-warning"><i class="bi bi-pencil-square"></i></a>
                                                 <a asp-action="Delete" asp-route-id="@teacher.Id" class="btn btn-danger"><i class="bi bi-trash-fill"></i></a>
-                                                <a asp-controller="Course" asp-action="Details" asp-route-id="@teacher.Id" class="btn btn-success"><i class="bi bi-chat-left-dots"></i></a>
+                                                <a asp-controller="Teacher" asp-action="Details" asp-route-id="@teacher.Id" class="btn btn-success"><i class="bi bi-chat-left-dots"></i></a>
 
                                             </td>
                                         </tr>
