--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Details.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Details.cshtml
@@ -35,22 +35,8 @@
                     </div>
                     <div class="course-details-content">
                         <h2>@courseName</h2>
-                        <p>I must explain to you how all this a mistaken idea of denouncing great explorer of the rut the is lder of human happiness pcias unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit asnatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui </p>
-                        <div class="course-details-left">
-                            <div class="single-course-left">
-                                <h3>about course</h3>
-                                <p>I must explain to you how all this a mistaken idea of ncing great explorer of the rut the is lder of human happinescias unde omnis iste natus error sit volptatem accuntium mque laudantium perspiciatis unde omnis iste natuss</p>
-                            </div>
-                            <div class="single-course-left">
-                                <h3>how to apply</h3>
-                                <p>I must explain to you how all this a mistaken idea of ncing great explorer of the rut the is lder of human happinescias unde omnis iste natus error sit volptatem accuntium mque laudantium perspiciatis unde omnis iste natuss</p>
-                            </div>
-                            <div class="single-course-left">
-                                <h3>certification</h3>
-                                <p class="margin">I must explain to you how all this a mistaken idea of ncing great explorer of the rut the is lder of human happinescias unde omnis iste natus error sit volptatem accuntium mque laudantium perspiciatis unde omnis iste natuss</p>
-                                <p>I must explain to you how all this a mistaken idea of ncing great explorer of the rut the is lder of human</p>
-                            </div>
-                        </div>
+                        <p>@Html.Raw(Model.Description)</p>
+
                         <div class="course-details-right">
                             <h3>COURSE FEATURES</h3>
                             <ul>
