Event get create started

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -463,7 +463,7 @@
                                 <li><a asp-controller="Language" asp-action="Index">Languages</a></li>
                                 <li><a asp-controller="Assesment" asp-action="Index">Assesment</a></li>
                                 <li><a asp-controller="Skill" asp-action="Index">Skills</a></li>
-                                <li><a asp-controller="Events" asp-action="Index">Events</a></li>
+                                <li><a asp-controller="Event" asp-action="Index">Events</a></li>
                                 <li><a asp-controller="Teacher" asp-action="Index">Teachers</a></li>
                                 <li><a asp-controller="Testimonials" asp-action="Index">Testimonials</a></li>
                                 <li><a asp-controller="Blogs" asp-action="Index">Blogs</a></li>
