--- a/EduHomeUI/Areas/EHMasterPanel/Views/Speaker/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Speaker/Index.cshtml
@@ -9,8 +9,8 @@
     <div class="row">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Languages</h4>
-                <a asp-controller="Language" asp-action="Create" class="btn btn-primary mb-4">Create New Language</a>
+                <h4 class="card-title">Speakers</h4>
+                <a asp-controller="Speaker" asp-action="Create" class="btn btn-primary mb-4">Create New Speaker</a>
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered">
                         <thead>
