--- a/EduHomeUI/Areas/EHMasterPanel/Views/Event/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Event/Create.cshtml
@@ -64,10 +64,11 @@
                     <div class="row mb-3">
                         <label asp-for="Date" class="col-md-3 col-form-label">Date</label>
                         <div class="col-sm-9">
-                            <input asp-for="Date" class="form-control" />
+                            <input asp-for="Date" class="form-control" type="date" />
                             <span asp-validation-for="Date" class="text-danger"></span>
                         </div>
                     </div>
+
 
                     <div class="row mb-3">
                         <label asp-for="SpeakerId" class="col-md-3 col-form-label">Speaker</label>
