--- a/EduHomeUI/Areas/EHMasterPanel/Views/Event/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Event/Create.cshtml
@@ -77,13 +77,17 @@
                                 <option value="">No Speaker</option>
                                 @foreach (var speaker in Model.Speakers)
                                 {
-                                    <option value="@speaker.Id">@speaker.Name</option>
+                                    @if (!speaker.IsDeleted)
+                                    {
+                                        <option value="@speaker.Id">@speaker.Name</option>
+                                    }
                                 }
                             </select>
                             <input type="hidden" asp-for="Speakers" />
                             <span asp-validation-for="SpeakerId" class="text-danger"></span>
                         </div>
                     </div>
+
 
                     <h3>Event Details</h3>
 
