layout changed - identity options service added

--- a/EduHomeUI/Views/Shared/_Layout.cshtml
+++ b/EduHomeUI/Views/Shared/_Layout.cshtml
@@ -32,18 +32,37 @@
 	<![endif]-->
 	<!-- Header Area Start -->
 	<header class="top">
-		<div class="header-area header-sticky fixed">
+		<div class="header-top">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3">
-						<div class="logo">
-							<a href="index.html"><img src="img/logo/logo.png" alt="eduhome" /></a>
+					<div class="col-md-8 col-sm-8">
+						<div class="header-top-left">
+							<p>HAVE ANY QUESTION ?  +880 5698  598  6587</p>
 						</div>
 					</div>
-					<div class="col-md-9">
-						<div class="content-wrapper one">
+					<div class="col-md-4 col-sm-4">
+						<div class="header-top-right text-md-end text-center">
+							<ul>
+								<li><a href="login.html">login</a></li>
+								<li><a href="signup.html">signup</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="header-area two header-sticky">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-3 col-sm-5 col-6">
+						<div class="logo">
+							<a href="index.html"><img src="img/logo/logo2.png" alt="eduhome" /></a>
+						</div>
+					</div>
+					<div class="col-md-9 col-sm-7 col-6">
+						<div class="content-wrapper text-end">
 							<!-- Main Menu Start -->
-							<div class="main-menu one text-end">
+							<div class="main-menu">
 								<nav>
 									<ul>
 										<li>
@@ -94,9 +113,30 @@
 									</ul>
 								</nav>
 							</div>
-							<div class="mobile-menu one"></div>
+							<!--Search Form Start-->
+							<div class="search-btn">
+								<ul class="header-search search-toggle">
+									<li class="search-menu">
+										<i class="fa fa-search"></i>
+									</li>
+								</ul>
+								<div class="search">
+									<div class="search-form">
+										<form id="search-form" action="#">
+											<input type="search" placeholder="Search here..." name="search" />
+											<button type="submit">
+												<span><i class="fa fa-search"></i></span>
+											</button>
+										</form>
+									</div>
+								</div>
+							</div>
+							<!--End of Search Form-->
 							<!-- Main Menu End -->
 						</div>
+					</div>
+					<div class="col-12">
+						<div class="mobile-menu hidden-sm"></div>
 					</div>
 				</div>
 			</div>
