--- a/EduHomeUI/Views/Shared/_Layout.cshtml
+++ b/EduHomeUI/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
 						<div class="header-top-right text-md-end text-center">
 							<ul>
 								<li><a href="login.html">login</a></li>
-								<li><a href="signup.html">signup</a></li>
+								<li><a asp-controller="Auth" asp-action="Register">signup</a></li>
 							</ul>
 						</div>
 					</div>
